edit docker compose theo les 5
